# a7672s-connect

./: .gitignore  README.md
a7672sConnect/: a7672sConnect.c  a7672sConnect.h
example/mqtt/: CMakeLists.txt  a7672sConnect_mqtt.c
